--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,4 @@
 alembic==0.9.5
-click==6.7
-Flask==0.12.2
-Flask-Migrate==2.1.1
-Flask-SQLAlchemy==2.2
-itsdangerous==0.24
-Jinja2==2.9.6
-Mako==1.0.7
-MarkupSafe==1.0
-python-dateutil==2.6.1
-python-dotenv==0.6.5
-python-editor==1.0.3
-six==1.10.0
-SQLAlchemy==1.1.14
-Werkzeug==0.12.2
-alembic==0.9.5
-aniso8601==1.3.0
-click==6.7
-Flask==0.12.2
-Flask-Migrate==2.1.1
-Flask-RESTful==0.3.6
-Flask-SQLAlchemy==2.2
-itsdangerous==0.24
-Jinja2==2.9.6
-Mako==1.0.7
-MarkupSafe==1.0
-python-dateutil==2.6.1
-python-dotenv==0.6.5
-python-editor==1.0.3
-pytz==2017.2
-six==1.10.0
-SQLAlchemy==1.1.14
-Werkzeug==0.12.2
-alembic==0.9.5
 aniso8601==1.3.0
 click==6.7
 Flask==0.12.2
@@ -45,7 +12,9 @@ Jinja2==2.9.6
 Mako==1.0.7
 MarkupSafe==1.0
 psycopg2==2.7.3.1
+py==1.4.34
 PyJWT==1.4.2
+pytest==3.2.2
 python-dateutil==2.6.1
 python-dotenv==0.6.5
 python-editor==1.0.3
