--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
-  python:
-    - 3.6
-    - nightly
-  script:
-    - nosetests --with-coverage --cover-package=app
+python:
+  - "3.6"
+install:
+  - pip install -r requirements.txt
+script:
+  - nosetests --with-coverage
+cache: pip
