--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 alembic==0.9.5
 aniso8601==1.3.0
+certifi==2017.7.27.1
+chardet==3.0.4
 click==6.7
+coverage==4.4.1
+coveralls==1.2.0
+docopt==0.6.2
 Flask==0.12.2
+Flask-Cors==3.0.3
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.3.1
 Flask-Migrate==2.1.1
 Flask-RESTful==0.3.6
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.2
+gunicorn==19.7.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
 MarkupSafe==1.0
+nose==1.3.7
 psycopg2==2.7.3.1
 py==1.4.34
 PyJWT==1.4.2
@@ -19,7 +29,8 @@ python-dateutil==2.6.1
 python-dotenv==0.6.5
 python-editor==1.0.3
 pytz==2017.2
+requests==2.18.4
 six==1.10.0
 SQLAlchemy==1.1.14
+urllib3==1.22
 Werkzeug==0.12.2
-gunicorn
