--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - nosetests --with-coverage
+  - nosetests --with-coverage --cover-package=app
 after_success: coveralls
